--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -1,3 +1,15 @@
+section {
+    padding: 15px 20px;
+    text-align: center;
+    background-color: grey;
+    width: 320px;
+    height: 270px;
+}
+
+.title {
+    color: blue;
+    font-size: 50px;
+}
 .list {
     display: flex;
     padding: 0;
